--- a/app/src/main/res/layout/network_error_layout.xml
+++ b/app/src/main/res/layout/network_error_layout.xml
@@ -9,7 +9,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_cloud_off" />
+        android:src="@drawable/ic_cloud_off"
+        android:contentDescription="@string/no_internet_image_view_description" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,10 +21,10 @@
         android:textSize="@dimen/text_small" />
 
     <Button
+        android:id="@+id/repeat_connection_button"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onRepeatConnectionButtonPressed"
         android:text="@string/repeat_button_text"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/text_medium" />
