--- a/app/src/main/res/layout/gif_layout.xml
+++ b/app/src/main/res/layout/gif_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     card_view:cardCornerRadius="@dimen/corner_radius_medium"
     card_view:cardElevation="@dimen/elevation_small"
     card_view:cardUseCompatPadding="true">
@@ -22,6 +22,7 @@
             android:id="@+id/gif_image_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:contentDescription="@string/gif_image_view_description"
             tools:src="@mipmap/dev_life" />
 
         <TextView
