--- a/app/src/main/res/layout/network_error_layout.xml
+++ b/app/src/main/res/layout/network_error_layout.xml
@@ -17,8 +17,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_small"
         android:gravity="center"
-        android:text="@string/network_error_message"
+        android:text="@string/network_error_text"
         android:textSize="@dimen/text_small" />
+
+    <ProgressBar
+        android:id="@+id/gif_request_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/repeat_connection_button"
